--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.12.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-paper": "^5.0.0-rc.7",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
   },
@@ -27,6 +31,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
   },
   "private": true
