--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@types/numeral": "^2.0.2",
+    "date-fns": "^2.29.3",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
+    "moti": "^0.20.0",
+    "numeral": "^2.0.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.38.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^5.0.0-rc.7",
+    "react-native-reanimated": "~2.9.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
