--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finance",
+  "name": "finances",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,41 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "@gorhom/portal": "^1.0.14",
     "@hookform/resolvers": "^2.9.10",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "^6.5.3",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "@types/numeral": "^2.0.2",
+    "@react-navigation/stack": "^6.3.4",
     "date-fns": "^2.29.3",
-    "expo": "~46.0.16",
-    "expo-status-bar": "~1.4.0",
-    "firebase": "^9.12.1",
-    "moti": "^0.20.0",
+    "expo": "~47.0.6",
+    "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
     "numeral": "^2.0.6",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-hook-form": "^7.38.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-paper": "^5.0.0-rc.7",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "~0.18.7",
-    "styled-components": "^5.3.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.39.4",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/numeral": "^2.0.2",
     "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
-    "@types/styled-components": "^5.1.26",
-    "@types/styled-components-react-native": "^5.1.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "typescript": "~4.3.5"
+    "@types/react-native": "~0.70.6",
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
