--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.3",
     "expo": "~47.0.6",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "firebase": "^9.14.0",
     "numeral": "^2.0.6",
     "react": "18.1.0",
@@ -33,7 +34,7 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "yup": "^0.32.11",
-    "expo-updates": "~0.15.6"
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
