--- a/app.json
+++ b/app.json
@@ -25,6 +25,10 @@
         "backgroundColor": "#121214"
       }
     },
+    "androidStatusBar": {
+      "barStyle": "light-content",
+      "backgroundColor": "#121214"
+    },
     "extra": {
       "eas": {
         "projectId": "a8fa1057-2508-4c50-88ae-849091e95b9c"
