--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "yup": "^0.32.11",
-    "expo-splash-screen": "~0.17.5"
+    "expo-splash-screen": "~0.17.5",
+    "expo-navigation-bar": "~2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
