--- a/app.json
+++ b/app.json
@@ -12,12 +12,9 @@
       "backgroundColor": "#121214"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/a8fa1057-2508-4c50-88ae-849091e95b9c"
+      "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -31,15 +28,6 @@
     "androidStatusBar": {
       "barStyle": "light-content",
       "backgroundColor": "#121214"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "a8fa1057-2508-4c50-88ae-849091e95b9c"
-      }
-    },
-    "owner": "ebuba",
-    "runtimeVersion": {
-      "policy": "sdkVersion"
     }
   }
 }
