--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "finances",
-    "slug": "finances",
+    "name": "OndeFoi?",
+    "slug": "ondefoi",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/expo/icon.png",
@@ -20,10 +20,9 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/expo/adaptive-icon.png",
-        "backgroundColor": "#121214"
+        "foregroundImage": "./src/assets/expo/adaptive-icon.png"
       },
-      "package": "com.ebuba.finances"
+      "package": "com.buba.ondefoi"
     },
     "androidStatusBar": {
       "barStyle": "light-content",
